--- a/_data/researchers.yml
+++ b/_data/researchers.yml
@@ -1,10 +1,10 @@
-- name: Aleena Qaiser
+- name: aleena qaiser
   in: https://www.linkedin.com/in/aleenaqaiser/
   web: https://aleena.framer.website/
   inst: university of michigan, us
   image: aq.jpeg
 
-- name: Guan-Ling Chen
+- name: guan-ling chen
   in: https://www.linkedin.com/in/guanling-chen/
   inst: university of michigan, us
   image: gc.jpeg
