--- a/_data/participants.yml
+++ b/_data/participants.yml
@@ -18,7 +18,7 @@
 
 - name: david sirkin
   scholar: https://scholar.google.com/citations?user=ual27FYAAAAJ
-  inst: stanford university, us
+  inst: us
   image: ds.jpg
 
 - name: hannah pelikan
