fix GuanLing's inst

--- a/_data/researchers.yml
+++ b/_data/researchers.yml
@@ -11,6 +11,6 @@
 
 - name: guan-ling chen
   in: https://www.linkedin.com/in/guanling-chen/
-  inst: university of michigan, us
+  inst: purdue university, us
   image: gc.jpeg
 
